fixed navbar overflow

--- a/index.css
+++ b/index.css
@@ -462,3 +462,6 @@ a[href="#footnote-3"]::after {
   display: flex;
   flex-direction: column;
 }
+.navbar {
+  overflow: hidden;
+}
